# free-scene

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
freescene/: __init__.py  __main__.py  cli.py  concat.py  config.py  pipeline.py  pricing.py  render.py  script.py
tests/: test_concat.py  test_pricing.py  test_script.py
