[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeai-scene"
version = "0.1.0"
description = "Multi-scene AI movie maker — point at any OpenAI-compatible LLM + video API, get a stitched mp4."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Free.ai", email = "hello@free.ai"}]
keywords = ["ai", "video", "movie", "generation", "cogvideox", "hunyuan", "wan", "ffmpeg", "openai", "scenes", "storyboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "build", "twine"]

[project.urls]
Homepage = "https://free.ai/video/movie/"
Repository = "https://github.com/freeaigit/free-scene"
Issues = "https://github.com/freeaigit/free-scene/issues"
Changelog = "https://github.com/freeaigit/free-scene/releases"

[project.scripts]
freescene = "freescene.cli:main"

[tool.setuptools.packages.find]
include = ["freescene*"]
exclude = ["tests*"]
